Added a cat images

--- a/test.html
+++ b/test.html
@@ -1,3 +1,13 @@
-<h1>Hey. I'm a big heading</h1>
-<p>Hey, im a paragraph element. cool huh?</p>
-<a href="https://google.com" target="_blank" title="Let's go to google">clink me! Im a link!</a>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Test page</title>
+</head>
+</body>
+  <h1>Hey. I'm a big heading</h1>
+  <p>Hey, im a <b>paragraph</b> element. cool huh?</p>
+  <a href="https://google.com" target="_blank" title="Let's go to google">clink me! Im a link!</a>
+  <<p>My name is:<br>kitty Cat</p>
+  <img src="img/cat.jpeg" alt="">
+</body>
+</html>
