--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <title>Wreck-it Ralph</title>
-    <link rel="icon" type="image/png" href="img/ralph-avatar.jpg"/>
+    <link rel="icon" href="img/ralph-avatar.jpg">
+    <link rel="stylesheet" type="text/css" href="css/hero.css">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   </head>
   <body>
 <!-- header element -->
@@ -16,7 +18,7 @@
   <h2>About Ralph</h2>
   <p>Ralph is awesome he's an 8-bit videogame bad guy who travels the length of the arcade to prove that he's a good guy.</p>
   <img src="img/ralph-big.jpg">
-  <p>Ralph and his friends</p>
+  <p class="caption">Ralph and his friends</p>
   <!-- characteristics -->
   <h2>Ralphs's characteristics</h2>
   <ol>
